trustfall_core/test_data/tests/valid_queries/avoid_output_name_conflict_with_alias_name.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    One {
        value @output

        successor {
            successor: value @output
        }
    }
}"#,
    arguments: {},
)
