trustfall_core/test_data/tests/parse_errors/duplicate_fold.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @output

        out_Directory_ContainsFile @fold @fold {
            file: name @output
        }
    }
}"#,
    arguments: {},
)
